--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ jspm_packages
 !/log/.keep
 !/tmp/.keep
 
-# Ignore uploaded files in development
+# Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
 
