--- a/voice-tunes-backend/Gemfile
+++ b/voice-tunes-backend/Gemfile
@@ -25,6 +25,10 @@ gem 'bootsnap', '>= 1.4.2', require: false
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
 gem 'rack-cors'
 
+# Other gems
+gem 'carrierwave', '~> 2.0'
+gem "google-cloud-storage", "~> 1.3", require: false
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
