--- a/voice-tunes-backend/config/storage.yml
+++ b/voice-tunes-backend/config/storage.yml
@@ -6,6 +6,21 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+# For use in Heroku
+# Helpful information: https://pjbelo.medium.com/setting-up-rails-5-2-active-storage-using-google-cloud-storage-and-heroku-23df91e830f8
+
+# google:
+#   service: GCS
+#   project: todo-pic
+#   credentials: <%= ENV['GOOGLE_APPLICATION_CREDENTIALS'].as_json %>
+#   bucket: voice-tunes-midi-files
+
+google:
+  service: GCS
+  project: voice-tunes
+  credentials: <%= Rails.root.join("config/secrets/voice-tunes.json") %>
+  bucket: voice-tunes-midi-files
+
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
